# neofetch-win

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tr-README.md  zh-cn-README.md
.github/workflows/: type_lint.yml
neofetch_win/: __init__.py  __main__.py  argpar.py  art.py  main.py  neofetch.py
